# object-detection-inference

./: .dockerignore  .gitignore  Build_Tensorflow.md  CMakeLists.txt  Detector.cpp  Detector.h  DnnDetector.cpp  DnnDetector.h  ExportInstructions.md  GStreamerOpenCV.cpp  GStreamerOpenCV.h  HogSvmDetector.cpp  HogSvmDetector.h  LICENSE  Makefile  MobileNetSSD.cpp  MobileNetSSD.h  README.md  TablePage.md  TensorFlowMultiboxDetector.cpp  TensorFlowMultiboxDetector.h  TensorFlowObjectDetection.cpp  TensorFlowObjectDetection.h  Yolo.cpp  Yolo.h  detector.cpp  detector.h  detector.h.save  docker_run_inference_e2e.sh  docker_run_inference_e2e_example_rtdetrv4.sh  docker_run_inference_example.sh  docker_run_inference_example_rtdetrv4.sh  download_libtorch.sh  download_onnx_runtime.sh  download_tensorrt.sh  main.cpp  run_node.sh  setup_env.sh  versions.env  versions.neuriplo.env  (+1 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
Dockerfiles/: Dockerfile.libtorch  Dockerfile.onnxruntime  Dockerfile.openvino  Dockerfile.tensorrt
app/: CMakeLists.txt  main.cpp
app/inc/: AppConfig.hpp  CommandLineParser.hpp  ObjectDetectionApp.hpp  VisionApp.hpp  utils.hpp
app/src/: CommandLineParser.cpp  ObjectDetectionApp.cpp  VisionApp.cpp  VisionAppProcessing.cpp  VisionAppRendering.cpp  VisionAppTaskRouting.cpp  utils.cpp
app/test/: CMakeLists.txt  test_ObjectDetectionApp.cpp  test_parseCommandLineArguments.cpp  test_utils.cpp
cmake/: AddCompileDefinitions.cmake  DependencyValidation.cmake  ExternalDependencies.cmake  GStreamer.cmake  LibTensorFlow.cmake  LibTorch.cmake  LinkBackend.cmake  ONNXRuntime.cmake  OpenCVdnn.cmake  OpenVino.cmake  QueryGpu.cmake  SelectBackend.cmake  SetCompilerFlags.cmake  TensorRT.cmake  versions.cmake
components/inference-engines/: CMakeLists.txt
components/videocapture/: CMakeLists.txt
detectors/: CMakeLists.txt
detectors/inc/: Detection.hpp  DetectorSetup.hpp
detectors/src/: Detector.cpp  Detector.hpp  DetectorSetup.cpp  RtDetr.cpp  RtDetr.hpp  RtDetrUltralytics.cpp  RtDetrUltralytics.hpp  YOLOv10.cpp  YOLOv10.hpp  YoloNas.cpp  YoloV4.cpp  YoloVn.cpp  YoloVn.hpp
detectors/src/models/: DFine.cpp  DFine.hpp  Detector.hpp  RfDetr.cpp  RfDetr.hpp  RtDetr.cpp  RtDetr.hpp  RtDetrUltralytics.cpp  RtDetrUltralytics.hpp  YOLOv10.cpp  YOLOv10.hpp  YoloNas.cpp  YoloNas.hpp  YoloV4.cpp  YoloV4.hpp  YoloVn.cpp  YoloVn.hpp
detectors/test/: CMakeLists.txt  test_DetectorSetup.cpp
docker/: Dockerfile.libtensorflow  Dockerfile.libtorch  Dockerfile.onnxruntime  Dockerfile.openvino  Dockerfile.tensorrt
docs/: ARCHITECTURE.md  DependencyManagement.md  DetectorArchitectures.md  ExportInstructions.md  ROS2-Deployment.md  TablePage.md  d-fine-export.md  deim-export.md  deimv2-export.md  rf-detr-export.md  rtdetr-export.md  rtdetr-lyuwenyu-export.md  rtdetr-ultralytics-export.md  rtdetrv2-lyuwenyu-export.md  yolo-nas-export.md  yolo11-export.md  yolov10-export.md  yolov12-export.md  yolov5-export.md  yolov6-export.md  yolov7-export.md  yolov8-export.md  yolov9-export.md
export/rf-detr/: export_libtorch.py  export_onnx.py
inc/: Detector.hpp  DetectorFactory.hpp  DetectorSetup.hpp  GStreamerOpenCV.hpp  HogSvmDetector.hpp  InferenceBackendSetup.hpp  InferenceEngineSetup.hpp  Logger.hpp  MobileNetSSD.hpp  TFDetectionAPI.hpp  TensorflowObjectDetection.hpp  VideoCaptureFactory.hpp  VideoCaptureInterface.hpp  Yolo.hpp  YoloNas.hpp  YoloV4.hpp  YoloV5.hpp  YoloV8.hpp  common.hpp  utils.hpp
labels/: coco-labels-91.txt
models/multibox_detector/: multibox_location_priors.txt
playground/tensorrt_test/: CMakeLists.txt  tensorrt_test.cpp
ros2_ws/src/object_detection_ros/: CMakeLists.txt  README.md  install_ros2_jazzy.sh  package.xml
ros2_ws/src/object_detection_ros/config/: rtdetr_example.yaml  yolov8_example.yaml
ros2_ws/src/object_detection_ros/include/object_detection_ros/: object_detection_node.hpp
ros2_ws/src/object_detection_ros/launch/: detection.launch.py  detection_usb_cam.launch.py
ros2_ws/src/object_detection_ros/src/: object_detection_node.cpp
scripts/: docker_run_inference_example.sh  install_apt_3rd_party_dependencies.sh  setup_dependencies.sh  setup_libtorch.sh  setup_onnx_runtime.sh  setup_openvino.sh  setup_tensorflow.sh  setup_tensorrt.sh  sync_supported_model_types.py  update_backend_versions.sh
src/: AppConfig.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Detector.cpp  Detector.hpp  DetectorSetup.cpp  GStreamerCapture.hpp  GStreamerOpenCV.cpp  GStreamerOpenCV.hpp  HogSvmDetector.cpp  InferenceEngine.cpp  InferenceEngine.hpp  MobileNetSSD.cpp  ObjectDetectionApp.cpp  ObjectDetectionApp.hpp  OpenCVCapture.hpp  RtDetr.cpp  TFDetectionAPI.cpp  TensorflowObjectDetection.cpp  Yolo.cpp  Yolo.hpp  YoloNas.cpp  YoloNas.hpp  YoloV4.cpp  YoloV5.cpp  YoloV8.cpp
src/detectors/: CMakeLists.txt  Detector.cpp  Detector.hpp  RtDetr.cpp  RtDetr.hpp  RtDetrUltralytics.cpp  RtDetrUltralytics.hpp  YoloNas.cpp  YoloNas.hpp  YoloV4.cpp  YoloV4.hpp  YoloV8.hpp  YoloV9.cpp  YoloV9.hpp  YoloVn.cpp  YoloVn.hpp
src/inference-engines/: CMakeLists.txt  InferenceEngine.hpp  InferenceInterface.cpp  InferenceInterface.hpp
src/inference-engines/libtensorflow/: TFDetectionAPI.cpp  TFDetectionAPI.hpp
src/inference-engines/libtorch/: LibtorchInfer.cpp  LibtorchInfer.hpp
src/inference-engines/onnx-runtime/: ORTInfer.cpp  ORTInfer.hpp
src/inference-engines/opencv-dnn/: OCVDNNInfer.cpp  OCVDNNInfer.hpp
src/inference-engines/openvino/: OVInfer.cpp  OVInfer.hpp
src/inference-engines/tensorrt/: TRTInfer.cpp  TRTInfer.hpp
src/libtorch/: RtDetr.cpp  (+9 more)
src/videocapture/: CMakeLists.txt  GStreamerOpenCV.cpp  GStreamerOpenCV.hpp  VideoCaptureInterface.cpp
test/: CMakeLists.txt  test_DetectorSetup.cpp  test_ObjectDetectionApp.cpp  test_main.cpp  test_parseCommandLineArguments.cpp  test_utils.cpp
test/onnxruntime_test/: CMakeLists.txt
test/openvino_test/: CMakeLists.txt
test/tensorflow_test/: CMakeLists.txt  test.cpp
test/tensorrt_test/: CMakeLists.txt
tests/: CMakeLists.txt  ONNXRuntimeTest.cpp  ONNX_RUNTIME_Test.cmake
(+51 files in other folders)
